--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "Description": "Makes text darker for YouTube when using Dark Theme",
     "version": "1.0",
     "browser_action": {
-        "default_icon": "temp.png"
+        "default_icon": "./icons/main.png"
     },
     "content_scripts": [
         {
