Introduce optimized font size for comments and add CSS styling for font colors

--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,9 @@
             ],
             "js": [
                 "darker.js"
+            ],
+            "css": [
+                "darker.css"
             ]
         }
     ]
